--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "dokdo/aligo",
   "description": "Laravel notification channel for Aligo",
   "type": "library",
-  "version": "2.1.0",
+  "version": "2.2.0",
   "keywords": [
     "Laravel",
     "Notifications",
@@ -25,8 +25,8 @@
     "php": ">=7.2.5",
     "ext-json": "*",
     "guzzlehttp/guzzle": "^6.0 || ^7.0 || ^8.0",
-    "illuminate/notifications": "~5.6 || ~6.0 || ~7.0 || ~8.0 || ~9.0",
-    "illuminate/support": "~5.6 || ~6.0 || ~7.0 || ~8.0 || ~9.0"
+    "illuminate/notifications": "~5.6 || ~6.0 || ~7.0 || ~8.0 || ~9.0 || ~10.0 || ~11.0",
+    "illuminate/support": "~5.6 || ~6.0 || ~7.0 || ~8.0 || ~9.0 || ~10.0 || ~11.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^8.0 || ^9.0",
